kubernetes/apps/forgejo/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - git.erwanleboucher.dev
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
      timeouts:
        request: 300s
